--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@fontsource/roboto": "^4.5.1",
     "@mui/material": "^5.2.2",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "dotenv": "^10.0.0",
     "markdown-it": "^12.2.0",
     "next": "12.0.4",
     "react": "17.0.2",
+    "react-bootstrap": "^2.0.3",
     "react-dom": "17.0.2",
     "sass": "^1.44.0"
   },
