--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "bootstrap": "^5.1.3",
     "dotenv": "^10.0.0",
     "markdown-it": "^12.2.0",
-    "next": "12.0.4",
+    "next": "^12.0.7",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "17.0.2",
