--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "sass": "^1.44.0"
   },
   "devDependencies": {
+    "cypress": "^9.2.0",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4"
   }
