--- a/.github/workflows/CypressTests.yml
+++ b/.github/workflows/CypressTests.yml
@@ -8,9 +8,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-
+      # Install NPM dependencies, cache them correctly
+      # and run all Cypress tests
       - name: Cypress run
-        uses: cypress-io/github-actions@v2
+        uses: cypress-io/github-action@v2
         with:
           build: npm run build
-          start: npm run start
+          start: npm start
