--- a/package.json
+++ b/package.json
@@ -13,15 +13,14 @@
     "bootstrap": "^5.1.3",
     "dotenv": "^10.0.0",
     "markdown-it": "^12.2.0",
-    "next": "^12.0.7",
+    "next": "^10.0.1",
     "react": "17.0.2",
-    "react-bootstrap": "^2.0.3",
     "react-dom": "17.0.2",
     "sass": "^1.44.0"
   },
   "devDependencies": {
     "cypress": "^9.2.0",
     "eslint": "7.32.0",
-    "eslint-config-next": "12.0.4"
+    "eslint-config-next": "^0.2.4"
   }
 }
