--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,17 +4,17 @@ on:
     branches: [main]
 
   jobs:
-    deploy:
+    job_one:
+      name: deploy
       runs-on: ubuntu-latest
       steps:
-      - uses: actions/checkout@v2
-      - name: deploy source-code
-      uses: appleboy/scp-action@master
-      env:
-        HOST: ${{secrets.SSH_HOST}}
-        USERNAME: ${{secrets.SSH_USERNAME}}
-        PORT: 22
-        KEY: ${{secrets.ID_RSA_GITHUB_FRONTEND}}
-      with:
-        source: "*"
-        target: "/home/agarcia/portfolioBlog_frontEnd"
+      - name: test SSH connection
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{secrets.SSH_HOST}}
+          username: ${{secrets.SSH_USERNAME}}
+          port: 22
+          script:
+            cd /home/agarcia/portfolioBlog_frontEnd
+            git pull origin main
+            git status
