--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,8 @@ jobs:
     name: deploy
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v2
+
     - name: test SSH connection
       uses: appleboy/ssh-action@master
       with:
