--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,7 @@ jobs:
         host: ${{secrets.SSH_HOST}}
         username: ${{secrets.SSH_USERNAME}}
         password: ${{secrets.ID_RSA_GITHUB_FRONTEND}}
+        port: 2222
         script: |
           whoami
           hostname
