--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,5 +21,5 @@ jobs:
           git fetch
           git pull
           git status
-          node -v
-          npm -v
+          sudo node -v
+          sudo npm -v
