--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,9 +17,12 @@ jobs:
         password: ${{secrets.ID_RSA_GITHUB_FRONTEND}}
         port: 2222
         script: |
+          export NVM_DIR=~/.nvm
+          source ~/.nvm/nvm.sh
+          pm2 stop blog
           cd /home/agarcia/portfolioBlog_frontEnd
           git fetch
           git pull
           git status
-          sudo node -v
-          sudo npm -v
+          npm run build
+          pm2 start blog
