--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cypress": "cypress open"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "axios": "^0.24.0",
     "dotenv": "^10.0.0",
     "markdown-it": "^12.2.0",
